[finished] Getting rid of collections lang in closures